engine/codex-rs/tui/src/snapshots/codex_tui__cwd_prompt__tests__cwd_prompt_persistence_failure.snap
---
source: tui/src/cwd_prompt.rs
expression: rendered
---
Failed to save working directory preference.
