engine/codex-rs/tui/src/snapshots/codex_tui__cwd_prompt__tests__cwd_prompt_remembered_current_modal.snap
---
source: tui/src/cwd_prompt.rs
expression: rendered
---

  Working directory · resume
  Session = latest cwd recorded in the resumed session
  Current = your current working directory

› 1. Use session directory (/Users/example/session)
  2. Use current directory (/Users/example/current)
  3. Always use session directory
  4. Always use current directory (/Users/example/launched)

  enter continue · esc use session · ⌃c quit
